2006-09-21  David Kastrup  <dak@gnu.org>

	* preview.el (preview-TeX-style-cooked): Fix bugs.
	(preview-set-texinputs): Use `preview-TeX-style-cooked'.
	(preview-TeX-style-dir): Change doc string to reflect new behavior
	of `preview-set-texinputs'.
	(preview-install-styles): Try to deal with `preview-TeX-style-dir'
	properly.  Bomb out if no styles found to install.

	* configure.ac: Remove `--with-kpathseasep' option.

2006-09-01  David Kastrup  <dak@gnu.org>

	* prv-xemacs.el (preview-import-image): Allow strings as image
	properties.

	* prv-emacs.el (preview-remove-urgentization)
	(preview-import-image): Allow strings as image properties.

	* preview.el (preview-clearout, preview-kill-buffer-cleanup)
	(preview-place-preview): Use `timestamp' field universally for
	dealing with when to overwrite and when to retain images, don't
	rely on filename internals.
	(desktop-buffer-preview-misc-data): Use `preview-image' to judge
	the availability of savable data.
	(preview-reinstate-preview): Allow saving images without
	associated filenames.
	(preview-format-mml): Deal with string type images.

2006-08-25  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Use eTeX's `\protected' on redefinitions when
	available.

2006-08-15  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Change from 2006-07-12 could lose the
	`AtBeginDvi' material.  Fix that.  Disable preview within output
	routine.
	And actually hijack `\output' instead of doing it half way.

2006-07-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* latex/Makefile.in (install-texmf): Only update the relevant ls-R
	file.

2006-07-25  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Allow two optional parameters as in
	memoir.cls for sections.  Also preview chapter headings.

2006-07-23  Ralf Angeli  <angeli@caeruleus.net>

	* configure.ac: Fix spelling of MiKTeX.

2006-07-12  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Add a font-lock helping comment, remove